--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
 <body>
 
     <!-- header -->
+    <header>
+
+    </header>
 
     <!--/ header -->
 
-    <!-- main -->
+        <!-- jumbo -->
+    <section id="jumbotron">
 
+    </section>
+        <!-- /jumbo -->
+    <!-- main -->
+    <main>
+
+    </main>
     <!-- main -->
 
     <!-- footer -->
-    
+    <footer></footer>
     <!-- /footer -->
 
     
