--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
             <div class="row">
 
                     <!-- logo -->
-                <div class="logo">
+                <div id="logo">
                     <img src="/img/logo.svg" alt="discord_logo">
                 </div>
                     <!-- /logo -->
 
                     <!-- nav -->
                     <nav>
+                        <ul>
+                            <li><a href="" href+#="">AScarica</a></li>
+                            <li><a href="" href+#="">Perché Discord</a></li>
+                            <li><a href="" href+#="">Nitro</a></li>
+                            <li><a href="" href+#="">Sicurezza</a></li>
+                            <li><a href="" href+#="">Assistenza</a></li>
+                        </ul>
 
                     </nav>
                     <!-- nav -->
 
                     <!-- log_in -->
-                    <div class="log_in">
-                        
+                    <div id="log_in">
+
                     </div>
                     <!-- log_in -->
 
