--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <!-- nav -->
                     <nav>
                         <ul>
-                            <li><a href="" href+#="">AScarica</a></li>
-                            <li><a href="" href+#="">Perché Discord</a></li>
-                            <li><a href="" href+#="">Nitro</a></li>
-                            <li><a href="" href+#="">Sicurezza</a></li>
-                            <li><a href="" href+#="">Assistenza</a></li>
+                            <li><a href="#">AScarica</a></li>
+                            <li><a href="#">Perché Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
                         </ul>
 
                     </nav>
@@ -38,6 +38,7 @@
 
                     <!-- log_in -->
                     <div id="log_in">
+                        <a href="#" class="btn">Accedi</a>
 
                     </div>
                     <!-- log_in -->
