--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
                     <!-- logo -->
                 <div id="logo">
-                    <img src="/img/logo.svg" alt="discord_logo">
+                    <img src="img/logo.svg" alt="discord_logo">
                 </div>
                     <!-- /logo -->
 
                     <!-- nav -->
                     <nav>
                         <ul>
-                            <li><a href="#">AScarica</a></li>
+                            <li><a href="#">Scarica</a></li>
                             <li><a href="#">Perché Discord</a></li>
                             <li><a href="#">Nitro</a></li>
                             <li><a href="#">Sicurezza</a></li>
