--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
         <!-- jumbo -->
     <section id="jumbotron">
         <div class="container">
-
+            <div class="jumbo_text">
+                <h1> Il tuo posto per parlare</h1>
+                <p>che tu faccia parte di un club scolastico, gruppo di gamer, comunitá artistica mondiale, o semplicemente di un pioccolo gruppo di amici che vuole passare iltempo assieme, Discord rende piú facile chiacchierare ogni giorno e ritrovarsi piú spesso</p>
+                <a href="">Scarica per Mac</a>
+                <a href="">Apri Discord nel tuo Browser</a>
+            </div>
         </div>
     </section>
         <!-- /jumbo -->
