--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <!-- log_in -->
                     <div id="log_in">
-                        <a href="#" class="btn">Accedi</a>
+                        <a href="#" class="btn white">Accedi</a>
 
                     </div>
                     <!-- log_in -->
@@ -58,8 +58,8 @@
             <div class="jumbo_text">
                 <h1> Il tuo posto per parlare</h1>
                 <p>che tu faccia parte di un club scolastico, gruppo di gamer, comunitá artistica mondiale, o semplicemente di un pioccolo gruppo di amici che vuole passare iltempo assieme, Discord rende piú facile chiacchierare ogni giorno e ritrovarsi piú spesso</p>
-                <a href="">Scarica per Mac</a>
-                <a href="">Apri Discord nel tuo Browser</a>
+                <a href="" class="btn white">Scarica per Mac</a>
+                <a href="" class="btn black">Apri Discord nel tuo Browser</a>
             </div>
         </div>
     </section>
