--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>htmlcss-discord</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet">
+    
 </head>
 <body class="debug">
 
@@ -57,9 +55,12 @@
         <div class="container">
             <div class="jumbo_text">
                 <h1> Il tuo posto per parlare</h1>
-                <p>che tu faccia parte di un club scolastico, gruppo di gamer, comunitá artistica mondiale, o semplicemente di un pioccolo gruppo di amici che vuole passare iltempo assieme, Discord rende piú facile chiacchierare ogni giorno e ritrovarsi piú spesso</p>
-                <a href="" class="btn white">Scarica per Mac</a>
-                <a href="" class="btn black">Apri Discord nel tuo Browser</a>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunitá artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende piú facile chiacchierare ogni giorno e ritrovarsi piú spesso</p>
+                <a href="" class="btn big  white">
+                    <i class="fas fa-long-arrow-alt-down"></i>  
+                    Scarica per Mac
+                </a>
+                <a href="" class="btn big black">Apri Discord nel tuo Browser</a>
             </div>
         </div>
     </section>
