--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
     <main>
         <div class="container">
 
+            <div class="medial ">
+                <img class="frog" src="img/item1.svg" alt="frog">
+                <div class="a_place">
+                    <h2> Un luogo a invito con tutto lo  spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo </p>
+                </div>
+
+    
+            </div>
+
         </div>
     </main>
     <!-- main -->
@@ -77,6 +87,7 @@
     <footer>
         <div class="container">
             
+  
         </div>
     </footer>
     <!-- /footer -->
