--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
-<body class="debug">
+<!-- <body class="debug"> -->
 
     <!-- header -->
     <header>
@@ -52,6 +52,8 @@
 
         <!-- jumbo -->
     <section id="jumbotron">
+
+        
         <div class="container">
             <div class="jumbo_text">
                 <h1> Il tuo posto per parlare</h1>
